--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>experiment</title>
+        <title>weo weo weo weo weo weo</title>
     </head>
     <body>
         <script src="payload.js"></script>
